<resources>

    <string name="app_name">Pesel Generator</string>
    <string name="hello_world">Data urodzenia:</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Pesel Generator</string>
    <string name="plec">Płeć:</string>
    <string name="man">Mężczyzna</string>
    <string name="woman">Kobieta</string>

    <string-array name="plecChoose">
        <item>Kobieta</item>
        <item>Mężczyzna</item>
    </string-array>

    <string name="button">Wygeneruj</string>
    <string name="pesel">Pesel:</string>
    <string name="clicked">clicked</string>
    <string name="dataurodzenia">Data urodzenia:</string>
    <string name="ilosc">Ilość:</string>
    <string name="zero">0</string>
    <string name="title_activity_list">Lista Peseli</string>
    <string name="title_activity_list_pesel">Lista Nr Pesel</string>
    <string name="generator">Wygeneruj</string>
    <string name="sprawdz">Sprawdź</string>

</resources>