<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="376dp"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/padding_small"
            android:paddingRight="@dimen/padding_small" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:gravity="center_horizontal"
                android:text="@string/dataurodzenia" />

            <DatePicker
                android:id="@+id/datePicker1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/datePicker1"
                android:gravity="center_horizontal"
                android:text="@string/plec" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="false"
                android:entries="@array/plecChoose" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/spinner1"
                android:gravity="center_horizontal"
                android:text="@string/ilosc" />

            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView3"
                android:max="4999"
                android:progress="1" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="false"
                android:layout_below="@+id/seekBar1"
                android:layout_centerHorizontal="true"
                android:text="@string/button" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/seekBar1"
                android:layout_alignRight="@+id/spinner1"
                android:text="@string/zero" />

        </RelativeLayout>

  

</ScrollView>